force-app/main/default/objects/copado__Function__c/fields/copado__ApexClass__c.field-meta.xml
<CustomField>
    <fullName>copado__ApexClass__c</fullName>
    <description>The name of the Apex class which is executed after the function has run.</description>
    <inlineHelpText>Handler format: ClassName
The class must implement the MCCallBack interface.</inlineHelpText>
    <label>ApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>