force-app/main/default/objects/copado__Function__c/fields/copado__API_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__API_Name__c</fullName>
    <description>Provide a unique API name.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique name that identifies this function. The function result records will contain this API Name in the job type field for filtering these results in reports and dashboards.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>