force-app/main/default/objects/copado__Function__c/fields/copado__Image_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Image_Name__c</fullName>
    <defaultValue>&quot;copado-function-core:v1&quot;</defaultValue>
    <description>Name of the Image required to run the function.</description>
    <inlineHelpText>The docker image name provided by Copado. You will find available image paths in the Copado documentation. An image name is made up of slash-separated name components, prefixed by a registry hostname.</inlineHelpText>
    <label>Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>