force-app/main/default/objects/copado__Function__c/fields/copado__Timeout__c.field-meta.xml
<CustomField>
    <fullName>copado__Timeout__c</fullName>
    <description>The number of minutes after which the function will automatically finish if it doesn&apos;t finish before.</description>
    <inlineHelpText>The number of minutes after which the function will automatically end if there is no response from the function backend execution.</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>