force-app/main/default/objects/copado__Function__c/fields/copado__Worker_Size__c.field-meta.xml
<CustomField>
    <fullName>copado__Worker_Size__c</fullName>
    <description>Picklist field that defines the size of the worker. The available options are S, M, L, and XL.</description>
    <label>Worker Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <default>true</default>
                <label>S</label>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>