force-app/main/default/objects/copado__Function__c/validationRules/copado__Script_must_contain_a_value.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Script_must_contain_a_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(TRIM(copado__Script__c))
)</errorConditionFormula>
    <errorMessage>Script cannot be empty.</errorMessage>
</ValidationRule>